--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.29.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.44.7",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
@@ -30,7 +33,13 @@
     "@types/node": "^20.11.0",
     "@types/pg": "^8.11.10",
     "@types/ws": "^8.5.12",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "ts-jest": "^29.3.4",
     "typescript": "^5.6.3"
   }
 }
