--- a/server/package.json
+++ b/server/package.json
@@ -24,22 +24,25 @@
     "zod": "^3.25.6"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
+    "@aws-sdk/s3-request-presigner": "^3.948.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.0",
     "@types/pg": "^8.11.10",
-    "@types/ws": "^8.5.12",
-    "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.3",
+    "@types/ws": "^8.5.12",
+    "aws-sdk-client-mock": "^4.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "supertest": "^7.0.0",
-    "ts-node": "^10.9.2",
     "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
