--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.16.3",
+    "twilio": "^5.3.6",
     "ws": "^8.18.0",
     "zod": "^3.25.6"
   },
