--- a/.github/workflows/main_boreal-staff-server.yml
+++ b/.github/workflows/main_boreal-staff-server.yml
@@ -22,9 +22,11 @@ jobs:
           node-version: "20.x"
 
       - name: Install dependencies
+        working-directory: server
         run: npm ci
 
       - name: Build TypeScript
+        working-directory: server
         run: npm run build
 
       - name: Upload build artifact
@@ -32,11 +34,10 @@ jobs:
         with:
           name: staff-server-build
           path: |
-            dist/
-            package.json
-            package-lock.json
-            ecosystem.config.js
-            .env.production
+            server/dist/
+            server/package.json
+            server/package-lock.json
+            startup.sh
 
   deploy:
     runs-on: ubuntu-latest
