--- a/server/tsconfig.deploy.json
+++ b/server/tsconfig.deploy.json
@@ -6,10 +6,11 @@
     "strict": false,
     "noImplicitAny": false,
     "resolveJsonModule": true,
-    "typeRoots": [
-      "./types",
-      "./node_modules/@types"
-    ]
+    "typeRoots": ["./types", "./node_modules/@types"],
+    "types": ["node", "express"]
   },
-  "include": ["src/**/*.ts", "types/**/*.d.ts"]
+  "include": [
+    "src/**/*",
+    "types/**/*"
+  ]
 }
