--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,17 +1,13 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": false,
     "noEmit": false,
     "noEmitOnError": false,
     "checkJs": false
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*.ts",
+    "types/**/*.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
