--- a/.github/workflows/main_boreal-staff-server.yml
+++ b/.github/workflows/main_boreal-staff-server.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Use Node.js 20
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "20.x"
 
@@ -33,35 +33,26 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: staff-server-build
-          path: |
-            server/dist/
-            server/package.json
-            server/package-lock.json
-            startup.sh
+          path: server/dist
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      contents: read
 
     steps:
-      - name: Download artifact
+      - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
           name: staff-server-build
+          path: dist
 
-      - name: Azure Login (Federated / User Assigned Identity)
-        uses: azure/login@v2
+      - name: Azure Login using Publish Profile
+        uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
       - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: boreal-staff-server
-          slot-name: Production
-          package: .
+          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+          package: dist
