--- a/server/tsconfig.deploy.json
+++ b/server/tsconfig.deploy.json
@@ -1,16 +1,14 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "noEmit": false,
     "noEmitOnError": false,
-    "skipLibCheck": true,
-    "strict": false,
-    "noImplicitAny": false,
-    "resolveJsonModule": true,
-    "typeRoots": ["./types", "./node_modules/@types"],
-    "types": ["node", "express"]
+    "checkJs": false
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
+  "include": ["src/**/*"],
+  "exclude": [
+    "src/**/__tests__/**/*",
+    "src/**/*.test.ts",
+    "tests/**/*"
   ]
 }
