--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -10,33 +10,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
+      - name: Install dependencies (server folder)
         working-directory: server
         run: npm ci
 
-      - name: Build with tsconfig.deploy.json (NO type checks)
+      - name: Build TypeScript (server folder)
         working-directory: server
-        run: npx tsc -p tsconfig.deploy.json
+        run: npm run build
 
-      - name: Create deployment package
+      - name: Prepare artifact
         run: |
-          mkdir deploy
-          cp -r server/dist deploy/dist
-          cp server/package.json deploy/
-          cp server/package-lock.json deploy/
-          cp -r server/node_modules deploy/node_modules
+          mkdir build_output
+          cp -R server/dist build_output/dist
+          cp server/package.json build_output/
+          cp server/package-lock.json build_output/
+          # Required for Azure startup
+          echo "node dist/index.js" > build_output/server.js
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: staff-server-build
+          path: build_output
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZUREAPPSERVICE_PUBLISH_PROFILE }}
+
+      - name: Deploy ZIP to Azure Web App
+        uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: deploy
+          package: build_output
