--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,31 @@
   "name": "staff-server-core",
   "version": "1.0.0",
   "private": true,
+  "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
+    "dev": "nodemon src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "twilio": "^4.23.0"
+    "@azure/storage-blob": "^12.29.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.44.7",
+    "express": "^4.22.1",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.3",
+    "twilio": "^5.3.6",
+    "ws": "^8.18.0",
+    "zod": "^3.25.6"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.0",
+    "typescript": "^5.6.3",
+    "nodemon": "^3.0.2"
   }
 }
