--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "name": "staff-server-core",
   "version": "1.0.0",
   "private": true,
-  "main": "dist/index.js",
   "type": "commonjs",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc -p tsconfig.build.json",
@@ -25,8 +25,16 @@
     "zod": "^3.25.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.11.0",
-    "typescript": "^5.6.3",
-    "nodemon": "^3.0.2"
+    "@types/pg": "^8.11.10",
+    "@types/ws": "^8.5.12",
+    "nodemon": "^3.0.2",
+    "typescript": "^5.6.3"
   }
 }
