--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "commonjs",
   "main": "dist/index.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc -p tsconfig.build.json",
