--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,21 +1,23 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "CommonJS",
-    "rootDir": "src",
-    "outDir": "dist",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "types": ["node"]
+    "outDir": "./dist",
+    "rootDir": ".",
+    "noEmitOnError": true,
+    "sourceMap": false,
+    "declaration": false
   },
   "include": [
-    "src/**/*.ts"
+    "server/src/**/*.ts",
+    "types/**/*.ts",
+    "prisma/**/*.ts"
   ],
   "exclude": [
-    "src/__tests__",
     "**/*.test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "tests/**",
+    "simulation/**",
+    "node_modules/**",
+    "dist/**"
   ]
 }
