--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -28,16 +28,19 @@ jobs:
         working-directory: server
         run: npm run build
 
+      - name: Verify build output exists
+        run: test -f server/dist/index.js
+
       # ---- PACKAGE EVERYTHING AZURE NEEDS (INCLUDING node_modules) ----
       - name: Create deployment ZIP (dist + node_modules)
         run: |
           rm -rf deploy
-          mkdir -p deploy
+          mkdir -p deploy/server
 
-          cp -R server/dist deploy/dist
-          cp -R server/node_modules deploy/node_modules
-          cp server/package.json deploy/package.json
-          cp server/package-lock.json deploy/package-lock.json
+          cp -R server/dist deploy/server/dist
+          cp -R server/node_modules deploy/server/node_modules
+          cp server/package.json deploy/server/package.json
+          cp server/package-lock.json deploy/server/package-lock.json
 
           cd deploy
           zip -r ../staff-server-build.zip .
