--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -31,17 +31,16 @@ jobs:
       - name: Verify build output exists
         run: test -f server/dist/index.js
 
+      - name: Snapshot build layout
+        run: |
+          ls -la server
+          ls -la server/dist
+
       # ---- PACKAGE EVERYTHING AZURE NEEDS (INCLUDING node_modules) ----
       - name: Create deployment ZIP (preserve server/ structure)
         run: |
-          rm -rf deploy
-          mkdir -p deploy
-
-          # Copy the entire server directory so dist/ and node_modules/ are preserved
-          cp -R server deploy/server
-
-          cd deploy
-          zip -r ../staff-server-build.zip server
+          rm -f staff-server-build.zip
+          zip -r staff-server-build.zip server
 
       # ---- DEPLOY ZIP ONLY (NO AZURE BUILD) ----
       - name: Deploy ZIP to Azure Web App
@@ -50,3 +49,4 @@ jobs:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: staff-server-build.zip
+          startup-command: node server/dist/index.js
