--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,21 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.29.1",
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
     "express": "^4.19.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.16.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.30",
+    "@types/pg": "^8.16.0",
     "typescript": "^5.4.5"
   }
 }
