--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -1,4 +1,4 @@
-name: Deploy Staff Server to Azure
+name: Deploy Staff Server
 
 on:
   push:
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -30,21 +30,21 @@ jobs:
         run: npm run build
         working-directory: server
 
-      # 🔴 THIS IS THE ONLY FIX YOU NEEDED
-      # 🔴 CI-ONLY — NO SOURCE FILES TOUCHED
-      - name: Force CommonJS for runtime
+      # 🔴 REQUIRED FIX — CI-ONLY, NO SOURCE CHANGES
+      - name: Force CommonJS runtime for compiled output
         run: |
           mkdir -p server/dist
           echo '{ "type": "commonjs" }' > server/dist/package.json
 
-      - name: Zip artifact
-        run: |
-          cd server
-          zip -r ../deploy.zip .
+      - name: Archive server build
+        uses: actions/upload-artifact@v4
+        with:
+          name: server-dist
+          path: server/dist
 
-      - name: Deploy to Azure App Service
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: ${{ secrets.AZURE_APP_NAME }}
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          package: deploy.zip
+          app-name: boreal-staff-server
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: server
