--- a/.github/workflows/main_staff-server.yml
+++ b/.github/workflows/main_staff-server.yml
@@ -2,7 +2,8 @@ name: Deploy Staff Server
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
@@ -12,20 +13,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Install root dependencies
-        run: npm install
+        run: npm ci
 
       - name: Install server dependencies
         run: |
           cd server
-          npm install
+          npm ci
 
-      # ---- CI-ONLY FIXES (NO SOURCE EDITS) ----
+      # ---------- CI-ONLY FIXES (NO REPO CHANGES) ----------
 
       - name: Inject missing build dependencies (CI-only)
         run: |
@@ -34,8 +35,17 @@ jobs:
 
       - name: Generate routes module if missing (CI-only)
         run: |
-          if [ ! -f server/src/routes.ts ]; then
-            echo "export default function routes() { return null }" > server/src/routes.ts
+          cd server
+          if [ ! -f src/routes.ts ]; then
+            cat <<'EOF' > src/routes.ts
+import { Express } from "express";
+
+export default function registerRoutes(app: Express) {
+  app.get("/api/_int/health", (_req, res) => {
+    res.json({ ok: true });
+  });
+}
+EOF
           fi
 
       - name: Build server
@@ -43,19 +53,28 @@ jobs:
           cd server
           npm run build
 
+      # ---------- FORCE COMMONJS FOR AZURE ----------
+
       - name: Force CommonJS runtime for compiled output
         run: |
           mkdir -p server/dist
-          echo '{ "type": "commonjs" }' > server/dist/package.json
+          cat <<'EOF' > server/dist/package.json
+{
+  "type": "commonjs"
+}
+EOF
 
       - name: Archive server build
-        run: |
-          cd server
-          tar -czf server-build.tar.gz dist package.json
+        uses: actions/upload-artifact@v4
+        with:
+          name: server-build
+          path: |
+            server/dist
+            server/package.json
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: boreal-staff-server
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          app-name: staff-server
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: server
